refactor questions module with record dtos