@@ -4,11 +4,9 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.vidal.nlw_certification.modules.questions.dtos.QuestionShowDTO;
 import com.vidal.nlw_certification.modules.questions.dtos.QuestionAlternativeCreateDTO;
-import com.vidal.nlw_certification.modules.questions.dtos.QuestionAlternativeShowDTO;
 import com.vidal.nlw_certification.modules.questions.dtos.QuestionCreateDTO;
 import com.vidal.nlw_certification.modules.questions.entities.QuestionAlternativeEntity;
 import com.vidal.nlw_certification.modules.questions.entities.QuestionEntity;
@@ -38,8 +36,7 @@ public class QuestionController {
     @GetMapping("")
     public ResponseEntity<List<QuestionShowDTO>> findAll() {
         List<QuestionEntity> result = this.questionRepository.findAll();
-        List<QuestionShowDTO> questions = result.stream().map(question -> convertQuestionToDto(question))
-                .collect(Collectors.toList());
+        List<QuestionShowDTO> questions = result.stream().map(QuestionShowDTO::new).toList();
 
         return ResponseEntity.ok().body(questions);
     }    
@@ -47,59 +44,9 @@ public class QuestionController {
     @GetMapping("/technology/{technology}")
     public ResponseEntity<Object> findByTechnology(@PathVariable String technology) {
         List<QuestionEntity> result = this.questionRepository.findByTechnology(technology);
-        List<QuestionShowDTO> questions = result.stream().map(question -> convertQuestionToDto(question))
-                .collect(Collectors.toList());
+        List<QuestionShowDTO> questions = result.stream().map(QuestionShowDTO::new).toList();
 
         return ResponseEntity.ok().body(questions);
-    }
-
-    public static QuestionShowDTO convertQuestionToDto(QuestionEntity question){
-
-        QuestionShowDTO questionDto = QuestionShowDTO.builder()
-            .id(question.getId())
-            .technology(question.getTechnology())
-            .description(question.getDescription())
-            .build();
-
-        List<QuestionAlternativeShowDTO> alternativesDto = question.getAlternatives().stream().map(alternative -> convertAlternativeToDto(alternative))
-        .collect(Collectors.toList());
-        
-        questionDto.setAlternatives(alternativesDto);
-
-        return questionDto;
-    }
-
-    public static QuestionAlternativeShowDTO convertAlternativeToDto(QuestionAlternativeEntity alternative){
-
-        return QuestionAlternativeShowDTO.builder()
-        .id(alternative.getId())
-        .description(alternative.getDescription())
-        .build();
-    }
-
-    private QuestionEntity convertDtoToQuestion(QuestionCreateDTO questionDTO){
-        
-        QuestionEntity question = QuestionEntity.builder()
-            .description(questionDTO.getDescription())
-            .technology(questionDTO.getTechnology())
-            .build();
-
-        for(QuestionAlternativeCreateDTO alternative : questionDTO.getAlternatives()){
-            QuestionAlternativeEntity alternativeEntity = convertDtoToQuestionAlternative(alternative);
-            question.addAlternative(alternativeEntity);
-        }
-
-        return question;
-    }
-
-    private QuestionAlternativeEntity convertDtoToQuestionAlternative(QuestionAlternativeCreateDTO alternativeDTO){
-       
-        QuestionAlternativeEntity alternativeEntity = QuestionAlternativeEntity.builder()
-            .description(alternativeDTO.getDescription())
-            .isCorrect(alternativeDTO.getIsCorrect())
-            .build();
-
-        return alternativeEntity;
     }
 
     // CRUD
@@ -108,15 +55,15 @@ public class QuestionController {
         Optional<QuestionEntity> question = questionRepository.findById(id);
         if(question.isEmpty()){
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Question Not Found");
-        }        
-        return ResponseEntity.ok().body(convertQuestionToDto(question.get()));
+        }
+        return ResponseEntity.ok().body(new QuestionShowDTO(question.get()));
     }
 
     @PostMapping
     public ResponseEntity<Object> createQuestion(@RequestBody @Valid QuestionCreateDTO questionDto){
-        QuestionEntity questionEntity = this.convertDtoToQuestion(questionDto);        
+        QuestionEntity questionEntity = new QuestionEntity(questionDto);
         questionEntity = questionRepository.save(questionEntity);
-        return ResponseEntity.status(HttpStatus.CREATED).body(convertQuestionToDto(questionEntity));
+        return ResponseEntity.status(HttpStatus.CREATED).body(new QuestionShowDTO(questionEntity));
     }
 
     @PutMapping("/{id}")
@@ -126,29 +73,23 @@ public class QuestionController {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Question Not Found");
         }
         QuestionEntity questionEntity = question.get();
-        questionEntity.setDescription(questionDto.getDescription());
-        questionEntity.setTechnology(questionDto.getTechnology());
+        questionEntity.setDescription(questionDto.description());
+        questionEntity.setTechnology(questionDto.technology());
 
         List<QuestionAlternativeEntity> oldAlternatives = new ArrayList<>(); 
         oldAlternatives.addAll(questionEntity.getAlternatives());
         for(QuestionAlternativeEntity alternative : oldAlternatives){
-            System.out.println(alternative.getId());
             questionEntity.removeAlternative(alternative);
         }
-        
-        System.out.println("TESTE");
-        for(QuestionAlternativeEntity alternative : questionEntity.getAlternatives()){
-            System.out.println(alternative.getId());            
-        }
 
-        for(QuestionAlternativeCreateDTO alternative : questionDto.getAlternatives()){
-            QuestionAlternativeEntity alternativeEntity = convertDtoToQuestionAlternative(alternative);
+        for(QuestionAlternativeCreateDTO alternative : questionDto.alternatives()){
+            QuestionAlternativeEntity alternativeEntity = new QuestionAlternativeEntity(alternative);
             questionEntity.addAlternative(alternativeEntity);
         }
 
         questionEntity = this.questionRepository.save(questionEntity);
-        return ResponseEntity.status(HttpStatus.OK).body(convertQuestionToDto(questionEntity));
-    }   
+        return ResponseEntity.status(HttpStatus.OK).body(new QuestionShowDTO(questionEntity));
+    }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Object> deleteQuestion(@PathVariable(value = "id") UUID id){
